mytest/flex_for_tinyc/bison/y.output
Grammar

    0 $accept: S $end

    1 S: S E '\n'
    2  | %empty

    3 K: T_NUM

    4 E: K '+' K
    5  | K '-' K
    6  | K '*' K
    7  | K '/' K
    8  | '(' K ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 1
'(' (40) 8
')' (41) 8
'*' (42) 6
'+' (43) 4
'-' (45) 5
'/' (47) 7
error (256)
T_NUM (258) 3


Nonterminals, with rules where they appear

$accept (11)
    on left: 0
S (12)
    on left: 1 2, on right: 0 1
K (13)
    on left: 3, on right: 4 5 6 7 8
E (14)
    on left: 4 5 6 7 8, on right: 1


State 0

    0 $accept: . S $end

    $default  reduce using rule 2 (S)

    S  go to state 1


State 1

    0 $accept: S . $end
    1 S: S . E '\n'

    $end   shift, and go to state 2
    T_NUM  shift, and go to state 3
    '('    shift, and go to state 4

    K  go to state 5
    E  go to state 6


State 2

    0 $accept: S $end .

    $default  accept


State 3

    3 K: T_NUM .

    $default  reduce using rule 3 (K)


State 4

    8 E: '(' . K ')'

    T_NUM  shift, and go to state 3

    K  go to state 7


State 5

    4 E: K . '+' K
    5  | K . '-' K
    6  | K . '*' K
    7  | K . '/' K

    '+'  shift, and go to state 8
    '-'  shift, and go to state 9
    '*'  shift, and go to state 10
    '/'  shift, and go to state 11


State 6

    1 S: S E . '\n'

    '\n'  shift, and go to state 12


State 7

    8 E: '(' K . ')'

    ')'  shift, and go to state 13


State 8

    4 E: K '+' . K

    T_NUM  shift, and go to state 3

    K  go to state 14


State 9

    5 E: K '-' . K

    T_NUM  shift, and go to state 3

    K  go to state 15


State 10

    6 E: K '*' . K

    T_NUM  shift, and go to state 3

    K  go to state 16


State 11

    7 E: K '/' . K

    T_NUM  shift, and go to state 3

    K  go to state 17


State 12

    1 S: S E '\n' .

    $default  reduce using rule 1 (S)


State 13

    8 E: '(' K ')' .

    $default  reduce using rule 8 (E)


State 14

    4 E: K '+' K .

    $default  reduce using rule 4 (E)


State 15

    5 E: K '-' K .

    $default  reduce using rule 5 (E)


State 16

    6 E: K '*' K .

    $default  reduce using rule 6 (E)


State 17

    7 E: K '/' K .

    $default  reduce using rule 7 (E)
